--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,11 @@
 
 # Ignore bundler config.
 /.bundle
-
-# Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
-
-# Ignore all logfiles and tempfiles.
-/log/*
-!/log/.keep
+/log/*.log*
 /tmp
+.DS_Store
+.env
+public/uploads
+/config/database.yml
